# xencelabs-quick-keys-rs

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
examples/: color.rs  progress.rs
src/: error.rs  lib.rs  msgs.rs
