[package]
name = "xencelabs-quick-keys"
version = "0.3.0"
authors = [
    "Roberto Abdelkader Martínez Pérez <robertomartinezp@gmail.com>"
]
edition = "2021"
repository = "https://github.com/nilp0inter/xencelabs-quick-keys-rs"
description = "A rust library for interfacing with the XenceLabs Quick Keys"
license = "MIT"
keywords = ["xencelabs", "quick-keys", "hid", "api", "usb"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "2.0.2"
thiserror = "1.0.51"
